[fix] Lang Routing

--- a/src/app/layout/navbar/navbar.html
+++ b/src/app/layout/navbar/navbar.html
@@ -9,7 +9,7 @@
     <!-- Centro -->
     <div class="nav-center">
       <a class="nav-logo" routerLink="/">
-        <img ngSrc="img/logo.png" alt="Logo" width="118" height="66" />
+        <img src="img/logo.png" alt="Logo" width="118" height="66" />
       </a>
     </div>
 
