--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,3 +1,9 @@
+
+
+
 <div class="section background">
+  <div class="left-logo">
+    <img ngSrc="img/home/logo-horizontal-rings.png" height="520" width="520" alt="Logo" priority>
+  </div>
 
 </div>
