--- a/src/app/layout/navbar/navbar.html
+++ b/src/app/layout/navbar/navbar.html
@@ -2,8 +2,8 @@
   <div class="nav-inner">
     <!-- Izquierda -->
     <div class="nav-left">
-      <a class="nav-link" routerLink="/about">About Us</a>
-      <a class="nav-link" routerLink="/contact">Contact</a>
+      <a class="nav-link" routerLink="/about">{{ "navbar.about-us" | translate }}</a>
+      <a class="nav-link" routerLink="/contact">{{ "navbar.contact" | translate }}</a>
     </div>
 
     <!-- Centro -->
@@ -15,8 +15,8 @@
 
     <!-- Derecha (orden desde la derecha hacia la izquierda) -->
     <div class="nav-right">
-      <a class="nav-link" routerLink="/menu">Menu</a>
-      <a class="nav-link" routerLink="/reservations">Reservations</a>
+      <a class="nav-link" routerLink="/menu">{{ "navbar.menu" | translate }}</a>
+      <a class="nav-link golden" routerLink="/reservations">{{ "navbar.reservations" | translate }}</a>
       <button class="hamburger" type="button" aria-label="Open menu">
         <span></span><span></span><span></span>
       </button>
