--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,9 +1,51 @@
 
-
-
 <div class="section background">
-  <div class="left-logo">
+  <div class="right-logo">
     <img ngSrc="img/home/logo-horizontal-rings.png" height="520" width="520" alt="Logo" priority>
+  </div>
+</div>
+
+
+<div class="section grid-section">
+  <div class="grid-lines" aria-hidden="true">
+    <div class="line line-top"></div>
+    <div class="line line-bottom"></div>
+    <div class="line line-right"></div>
+    <div class="line line-center"></div>
+  </div>
+
+  <img
+    class="grid-image"
+    ngSrc="/img/section2/img-2.jpg"
+    width="498"
+    height="604"
+    alt="Platillo Nikkei"
+  >
+
+
+  <div class="grid-copy">
+    <h1 class="grid-title">
+      Where Japanese precision, Peruvian soul, and Costa Rican essence converge.
+    </h1>
+
+    <img
+      class="grid-image--mobile"
+      ngSrc="/img/section2/img-2-mobile.png"
+      width="286"
+      height="304"
+      alt="Platillo Nikkei"
+    >
+
+    <p class="grid-sub">
+      Welcome to Ensō. <br class="mobile"><br class="mobile"> A celebration of Nikkei mastery in the heart of Escazú, Costa Rica. <br><br>
+      Inspired by the Costa Rican terroir and the true essence found in the simplicity yet magnificence of <i>nature</i>, our chefs craft a one-of-a-kind
+      tasting menu. <br><br>
+      Blending Japanese precision with Peruvian soul and Costa Rican biodiversity, we honor the legacy of Nikkei cuisine while carrying it forward with our own vision.
+    </p>
+
+    <button class="golden book-button">
+      Book the experience
+    </button>
   </div>
 
 </div>
