--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,5 +5,50 @@ body{
 
 html{
   --gold-400: #D3A841;
+  --gold-500: #C89211;
+  --gold-800: #6E5009;;
+  --white-500: #F7F5F0;
+  --black-600: #000000;
 }
 
+h1, h2, h3, h4, h5, h6, p{
+  margin: 0;
+}
+
+h1{
+  font-family: Cormorant, sans-serif;
+  font-size: 45px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 120%;
+  color: var(--gold-800);
+  margin: 0;
+}
+
+p{
+  font-family: Lato, sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  color: var(--black-600);
+}
+
+p.white{
+  color: var(--white-500);
+}
+
+button.golden{
+  background: var(--gold-500);
+  color: var(--black-600);
+  padding: 14px 5px;
+  font-family: Lato, sans-serif;
+  font-size: 15px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-transform: uppercase;
+  border: none;
+  cursor: pointer;
+  transition: background-color 150ms ease;
+}
