--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -1,12 +1,12 @@
 
-<div class="section background">
+<div class="section background" navTheme="light" [navThemeDebug]="true">
   <div class="right-logo">
     <img ngSrc="img/home/logo-horizontal-rings.png" height="520" width="520" alt="Logo" priority>
   </div>
 </div>
 
 
-<div class="section grid-section">
+<div class="section grid-section" navTheme="dark" [navThemeDebug]="true">
   <div class="grid-lines" aria-hidden="true">
     <div class="line line-top"></div>
     <div class="line line-bottom"></div>
@@ -48,4 +48,10 @@
     </button>
   </div>
 
+</div >
+
+<div class="section background" navTheme="light" [navThemeDebug]="true">
+  <div class="right-logo">
+    <img ngSrc="img/home/logo-horizontal-rings.png" height="520" width="520" alt="Logo" priority>
+  </div>
 </div>
