[add] Black section - responsiveness

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -50,8 +50,14 @@
   <div class="black-section-content">
     <div class="text">
       <h2 class="black title">{{"home.black-section.title" | translate}}</h2>
+      <div class="black-img-container--mobile">
+        <img
+          src="/img/section3/img-3.png"
+          alt="Platillo Nikkei"
+        >
+      </div>
       <div class="button-and-text">
-        <p class="sub black">{{"home.black-section.body" | translate}}</p>
+        <p class="sub black">{{"home.black-section.body" | translate}}<br><br></p>
         <button class="golden book-button black">
           {{"home.black-section.button" | translate}}
         </button>
