--- a/src/app/core/components/image-carousel/image-carousel.html
+++ b/src/app/core/components/image-carousel/image-carousel.html
@@ -1,37 +1,41 @@
 <div class="carousel"
-     [style.--carousel-h.px]="height"
+     [style.--carousel-h.vh]="height"
+     [style.--carousel-margin.px]="margin"
      (mouseenter)="onMouseEnter()"
      (mouseleave)="onMouseLeave()"
      aria-live="off">
 
   <!-- Pista -->
   <div class="track" [style.transform]="'translate3d(' + (-100 * current) + '%, 0, 0)'">
-    <figure class="slide" *ngFor="let img of images; let i = index" [attr.aria-hidden]="i !== current">
-      <img
-        [ngSrc]="img.src"
-        [attr.width]="img.width || '100%'"
-        [attr.height]="img.height || '100%'"
-        [alt]="img.alt"
-        loading="lazy"
-        decoding="async"
-        class="slide-img"
-        fill/>
-    </figure>
+    @for (img of images ?? []; track img.src; let i = $index) {
+      <figure class="slide" [attr.aria-hidden]="i !== current">
+        <img
+          [ngSrc]="img.src"
+          [attr.width]="img.width || '100%'"
+          [attr.height]="img.height || '100%'"
+          [alt]="img.alt"
+          loading="lazy"
+          decoding="async"
+          class="slide-img"
+          fill />
+      </figure>
+    }
   </div>
 
   <!-- Indicadores laterales (verticales a la derecha) -->
   <div class="indicators" role="tablist" aria-label="slides">
-    <button
-      *ngFor="let _ of images; let i = index"
-      class="dot"
-      type="button"
-      role="tab"
-      [attr.aria-selected]="i === current"
-      [attr.aria-current]="i === current"
-      [class.active]="i === current"
-      (click)="goTo(i)"
-      [attr.aria-label]="'Go to slide ' + (i + 1)">
-    </button>
+    @for (img of images ?? []; track img.src; let i = $index) {
+      <button
+        class="dot"
+        type="button"
+        role="tab"
+        [attr.aria-selected]="i === current"
+        [attr.aria-current]="i === current"
+        [class.active]="i === current"
+        (click)="goTo(i)"
+        [attr.aria-label]="'Go to slide ' + (i + 1)">
+      </button>
+    }
   </div>
 
 </div>
