[add] Section 5 Responsive

--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -111,4 +111,30 @@
   </button>
 </div>
 
+<div class="section section-5" navTheme="dark">
+  <div class="grid-lines-section-5" aria-hidden="true">
+    <div class="line line-top-section-5"></div>
+    <div class="line line-bottom-section-5"></div>
+    <div class="line line-right-section-5"></div>
+    <div class="line line-left-section-5"></div>
+  </div>
+
+  <div class="section-5__content">
+    <h2 class="grid-title section-5">
+      Not Just a Restaurant, But a <i>Curated Collective</i>.
+    </h2>
+    <div class="img-container-section-5">
+      <img
+        class="image section-5"
+        ngSrc="/img/section5/img-11.jpg"
+        width="286"
+        height="304"
+        alt="Platillo Nikkei"
+      >
+    </div>
+    <p class="grid-sub section-5">From international Nikkei chefs, sommeliers, experience designers, and local farmers who live and breathe Nikkei philosophy,  weʼve built a team that goes beyond
+      culinary excellence.<br/><br/></p>
+    <button class="transparent section-5">Plan your visit</button>
+  </div>
+</div>
 
