--- a/src/app/pages/home/home.scss
+++ b/src/app/pages/home/home.scss
@@ -301,7 +301,7 @@ button.golden.section-4{
 
 h2.grid-title.section-5{
   text-align: center;
-  max-width: 449px;;
+  max-width: 492px;;
   margin: 0 0 50px 0
 }
 
@@ -557,6 +557,9 @@ p.grid-sub.section-5{
     line-height: normal;
     max-width: 270px;
     margin-bottom: 26px;
+    br.desktop{
+      display: none;
+    }
   }
   button.transparent.section-5{
     margin-bottom: 58px;
