--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -135,3 +135,41 @@
   </div>
 </div>
 
+<div class="section black-section section-6" navTheme="light">
+  <div class="sub-section">
+    <div class="column">
+      <h2 class="black title section-6 italic" style="margin-bottom:55px">{{"home.section-6.title-1" | translate}}</h2>
+      <p class="sub black section-6 chef-name">Sergio Nakamura</p>
+      <p class="sub black section-6 chef-title">Creative Chef</p>
+      <p class="sub black section-6 paragraph">{{"home.section-6.body-1" | translate}}</p>
+    </div>
+    <div class="column">
+      <img
+        class="image section-6"
+        ngSrc="/img/section6/img-12.jpg"
+        width="357"
+        height="405"
+        alt="Chef Sergio Nakamura"
+      >
+    </div>
+  </div>
+  <div class="sub-section inverse">
+    <div class="column">
+      <h2 class="black title section-6 italic" style="margin-bottom:82px; max-width: 511px" [innerHTML]="('home.section-6.title-2' | translate)"></h2>
+      <p class="sub black section-6 chef-name">Carlos Gamboa</p>
+      <p class="sub black section-6 chef-title">Head Chef</p>
+      <p class="sub black section-6 paragraph">{{"home.section-6.body-2" | translate}}</p>
+      <button class="transparent black section-6">Reserve now</button>
+    </div>
+    <div class="column">
+      <img
+        class="image section-6"
+        ngSrc="/img/section6/img-13.png"
+        width="357"
+        height="405"
+        alt="Chef Sergio Nakamura"
+      >
+    </div>
+  </div>
+</div>
+
