--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,6 +30,15 @@ h2.black{
   color: var(--gold-500);
 }
 
+h3{
+  color: var(--white-500);
+  font-family: Cormorant, sans-serif;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+}
+
 p{
   font-family: Lato, sans-serif;
   font-size: 20px;
