--- a/src/app/pages/home/home.html
+++ b/src/app/pages/home/home.html
@@ -187,3 +187,32 @@
   </div>
 </div>
 
+<div class="section section-7" navTheme="light">
+  <div class="overlay container section-7">
+    <h2 class="section-7 title">From Simplicity, Something Singular</h2>
+    <h3 class="section-7 subtitle">The meaning behind Ensō</h3>
+    <img
+      class="image section-7 divider"
+      ngSrc="/img/rings.png"
+      width="78"
+      height="77"
+      alt="rings logo"
+    >
+
+    <div class="section-7 paragraph">
+      <p class="sub black section-7 body">Our story began with a journey that took us to Japan for over four years, where we immersed ourselves in its symbolism, rituals, and way of life. From that experience, we discovered not just a way of being, but a way of feeling life itself.</p>
+      <br>
+      <p class="sub black section-7 body">Like the warrior who masters rhythm and form, we understand that every dish, space, and gesture is an invisible art—a fleeting mastery where imperfection becomes beauty, and where simplicity transforms into something singular.</p>
+    </div>
+
+    <button class="transparent black section-7">Plan your visit</button>
+
+    <div class="section-7 right-text">
+      <h3 class="section-7 body">The crane emerged as our first root—an eternal symbol of longevity, good fortune, and the heritage we commit to carry forward with every creation.</h3>
+      <button class="golden section-7">Book the experience</button>
+    </div>
+
+    <div class="crane"></div>
+  </div>
+</div>
+
